# glacier

./: .gitmodules  CMakeLists.txt  README.md  format.sh  genjic.py  glacierc  glacierc.py  glacierd  glacierdsl  setup_env.sh  system_test.sh  system_test_all.sh  test.glac  unit_test.sh
compiler/: ast.py  bytecode.py  lexer.py  ops.py  parser.py
compiler/passes/: codegen.py  function_table.py  intrinsics.py  struct_defs.py  type_check.py
disassembler/: bytecode_reader.py  ops.py
dsl/: gen_compiler.py  gen_disassembler.py  gen_vm.py  ops.py  source_writer.py
examples/read_int/: read_int.glc
examples/read_str/: read_str.glc
glacier/: ast.py  bytecode.py  codegen.py  lexer.py  parser.py
glacier/passes/: codegen.py  function_table.py  intrinsics.py  struct_defs.py  type_deduction.py
system_tests/assignment/: assignment.glc  assignment.out
system_tests/comment/: comment.glc
system_tests/default_args/: default_args.glc  default_args.out
system_tests/example_1/: example_1.glc
system_tests/example_2/: example_2.glc
system_tests/example_3/: example_3.glc
system_tests/example_4/: example_4.glc
system_tests/example_5/: example_5.glc
system_tests/example_6/: example_6.glc  example_6.out
system_tests/fibonacci/: fibonacci.glc
system_tests/greater_than/: greater_than.glc
system_tests/loop/: loop.glc
system_tests/map/: map.glc  map.out
system_tests/map_insert/: map_insert.glc  map_insert.out
system_tests/map_insert_error/: map_insert_error.err  map_insert_error.glc
system_tests/map_stress/: map_stress.glc
system_tests/member_assignment/: member_assignment.glc  member_assignment.out
system_tests/methods/: methods.glc
system_tests/reassignment/: reassignment.glc
system_tests/recursive_containers/: recursive_containers.glc
system_tests/return_type_error/: return_type_error.err  return_type_error.glc
system_tests/scoping/: scoping.glc
system_tests/skip_loop/: skip_loop.glc
system_tests/struct/: struct.glc  struct.out
system_tests/type_error/: type_error.err  type_error.glc
system_tests/vector/: vector.glc  vector.out
system_tests/vector_len/: vector_len.glc
system_tests/vector_pop/: vector_pop.glc
system_tests/vector_push/: vector_push.glc
system_tests/vector_structs/: vector_structs.glc
system_tests/vector_type_error/: vector_type_error.err  vector_type_error.glc
system_tests/void/: void.glc  void.out
tests/: test_lexer.py  test_parser.py
vm/: Array.c  Array.h  ByteCode.c  ByteCode.h  CMakeLists.txt  FunctionTable.c  FunctionTable.h  GC.c  GC.h  Ops.h  Stack.c  Stack.h  Table.c  Table.h  Util.h  VM.c  VM.h  main.c
vm/ds/: Map.c  Map.h  Vector.c  Vector.h
